--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,1 +1,13 @@
-$bgcolor: rgb(48, 141, 129);
+$main_text_color: white;
+$bg_color: #242424;
+$input_color: #292929;
+$opencommand_color: #8ECC40;
+$path_color: #DFD836;
+
+$enginesrow_color: #6B6B6B;
+
+$cards_bg_color: #282828;
+$cards_bg2_color: rgba(58, 58, 58, 0.15);
+$cards_headertext_color: $main_text_color;
+$cards_tags_color: #7C7C7C;
+$cards_desc_color: #9E9E9E;
