dialog box attempt

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -6,6 +6,11 @@ $path_color: #DFD836;
 
 $enginesrow_color: #6B6B6B;
 
+$dialogbox_bgcolor: #88B267;
+$dialogbox_timelinecolor: #D0EBBB;
+$dialogbox_infoboxcolor: #94C56F;
+$dialogbox_textcolor: $main_text_color;
+
 $cards_bg_color: #282828;
 $cards_bg2_color: rgba(58, 58, 58, 0.15);
 $cards_headertext_color: $main_text_color;
