--- a/src/styles/_main_page.scss
+++ b/src/styles/_main_page.scss
@@ -1,6 +1,12 @@
 @import './vars';
 
+body {
+    position: relative;
+}
+
 body, html {
+    width: 100%;
+    height: 100%;
     background-color: $bg_color;
 }
 
@@ -80,6 +86,7 @@ span {
     left: -9999px;
     top: -9999px;
 }
+
 
 
 @keyframes inputAnimation {
