--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,6 +11,9 @@ $dialogbox_timelinecolor: #D0EBBB;
 $dialogbox_infoboxcolor: #94C56F;
 $dialogbox_textcolor: $main_text_color;
 
+$dialogbox_fadeinduration: 1s;
+$dialogbox_fadeoutduration: 1s;
+
 $cards_bg_color: #282828;
 $cards_bg2_color: rgba(58, 58, 58, 0.15);
 $cards_headertext_color: $main_text_color;
