--- a/src/styles/_dialogbox.scss
+++ b/src/styles/_dialogbox.scss
@@ -2,49 +2,46 @@
     position: absolute;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    align-content: center;
     justify-content: flex-end;
     overflow: hidden;
     right: 0;
     height: 100%;
-    width: 420px;
+    min-width: 420px;
 }
 
 .dialog_box_fadein {
     animation-name: dialog_fadeinouter_animation;
     animation-duration: $dialogbox_fadeinduration;
-    animation-timing-function: cubic-bezier(.17,.86,.02,1.05);
+    animation-timing-function: cubic-bezier(.17,.86,.02,1);
     animation-iteration-count: 1;
-    // animation-fill-mode: forwards;
 
     .dialog_box {
         animation-name: dialog_fadein_animation;
         animation-duration: $dialogbox_fadeinduration;
-        animation-timing-function: cubic-bezier(.17,.86,.02,1.05);
+        animation-timing-function: cubic-bezier(.17,.86,.02,1);
         animation-iteration-count: 1;
-        // animation-fill-mode: forwards;
     }
 }
 
 .dialog_box_fadeout {
-    animation-name: dialog_fadeoutouter_animation;
-    animation-duration: $dialogbox_fadeoutduration;
-    animation-timing-function: cubic-bezier(.15,.94,.23,1.11);
-    animation-iteration-count: 1;
-    // animation-fill-mode: forwards;
-    
     .dialog_box {
         animation-name: dialog_fadeout_animation;
         animation-duration: $dialogbox_fadeoutduration;
         animation-timing-function: cubic-bezier(.15,.94,.23,1.11);
         animation-iteration-count: 1;
-        // animation-fill-mode: forwards;
+        animation-fill-mode: forwards;
     }
 }
 
-.dialog_box {
+.dialog_box:last-child {
     bottom: 20px;
+}
+
+.dialog_box {
     margin-top: 8px;
-    width: 400px;
+    min-width: 400px;
     height: 60px;
     position: relative;
     background-color: $dialogbox_bgcolor;
@@ -80,6 +77,8 @@
 }
 
 .dialog_message {
+    width: 90%;
+    overflow: hidden;
     margin-left: 10px;
     font-size: 16px;
     font-family: 'FiraMono_Regular';
@@ -96,28 +95,27 @@
     border-radius: 10px 0 10px 0;
     &_active {
         animation-name: dialog_timeline_animation;
-        animation-duration: 1.5s;
         animation-timing-function: linear;
         animation-iteration-count: 1;
         animation-fill-mode: forwards;
     }
 }
 
-@keyframes dialog_fadeoutouter_animation {
-    0% {
-        height: 60px;
-    }
-    100% {
-        height: 0;
-    }
-}
+// @keyframes dialog_fadeoutouter_animation {
+//     0% {
+//         height: 68px;
+//     }
+//     100% {
+//         height: 0;
+//     }
+// }
 
 @keyframes dialog_fadeinouter_animation {
     0% {
         height: 0;
     }
     100% {
-        height: 60px;
+        height: 68px;
     }
 }
 
